--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
     "autoprefixer": "^10.4.21",
+    "aws-cdk-lib": "^2.220.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13"
   }
