--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "description": "Modern garment and fashion store frontend built with React and TypeScript",
   "scripts": {
     "dev": "vite --port 3001 --host",
-    "build": "tsc && vite build",
+    "build": "vite build",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
